Feature - update for SWAT FS 2022